fixed the typo in the url and added a div and box around the img tag in html

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,16 @@
 
 }
 
-.buttons {
-
-}
-
 #click_button {
 
 }
 
 #image {
 
+}
+
+.image_box {
+  border: 2px solid black;
+  height: 300px;
+  width: 300px;
 }
